--- a/.github/workflows/test_performance.yml
+++ b/.github/workflows/test_performance.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - develop
       - master
-      - feature_1739_par_jac
+      - sparsify_jacobian
 
   pull_request:
     branches:
