--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -66,8 +66,7 @@ jobs:
           git clone --depth 1 --branch develop \
             https://github.com/PEtab-dev/petab_test_suite \
             && source ./build/venv/bin/activate \
-            && cd petab_test_suite && pip3 install -e . \
-            && pip install git+https://github.com/PEtab-dev/libpetab-python@develop
+            && cd petab_test_suite && pip3 install -e .
 
       - name: Run PEtab-related unit tests
         run: |
