--- a/.github/workflows/test_sbml_semantic_test_suite.yml
+++ b/.github/workflows/test_sbml_semantic_test_suite.yml
@@ -13,6 +13,7 @@ on:
       - python/amici/import_utils.py
       - scripts/run-SBMLTestsuite.sh
       - tests/testSBMLSuite.py
+      - tests/conftest.py
   check_suite:
    types: [requested]
   workflow_dispatch:
