--- a/.github/workflows/test_sbml_semantic_test_suite.yml
+++ b/.github/workflows/test_sbml_semantic_test_suite.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        cases: ["1 - 250", "251 - 500", "501 - 750", "751 - 1000",
+        cases: ["1-250", "251-500", "501-750", "751-1000",
                 "1000-1250", "1251-1780"]
         python-version: [ 3.8 ]
 
