CI: Automatically detect available SBML semantic test cases (#1773)
... and do some cleanup along the way.

Also fixes a `KeyError` when raising an exception using for reserved symbols as model entity identifiers.

Closes #1771

--- a/.github/workflows/test_sbml_semantic_test_suite.yml
+++ b/.github/workflows/test_sbml_semantic_test_suite.yml
@@ -13,6 +13,7 @@ on:
       - python/amici/import_utils.py
       - scripts/run-SBMLTestsuite.sh
       - tests/testSBMLSuite.py
+      - tests/conftest.py
   check_suite:
    types: [requested]
   workflow_dispatch:
@@ -25,8 +26,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        cases: ["1 - 250", "251 - 500", "501 - 750", "751 - 1000",
-                "1000-1250", "1251-1780"]
+        cases: ["1-250", "251-500", "501-750", "751-1000",
+                "1000-1250", "1251-"]
         python-version: [ 3.8 ]
 
     steps:
