--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -63,9 +63,10 @@ jobs:
       # retrieve test models
       - name: Download and install PEtab test suite
         run: |
-          git clone --depth 1  --branch develop https://github.com/PEtab-dev/petab_test_suite \
+          git clone --depth 1 --branch develop \
+            https://github.com/PEtab-dev/petab_test_suite \
             && source ./build/venv/bin/activate \
-            && cd petab_test_suite && pip3 install -e . && cd ..
+            && cd petab_test_suite && pip3 install -e .
 
       - name: Run PEtab-related unit tests
         run: |
