--- a/.github/workflows/test_sbml_semantic_test_suite.yml
+++ b/.github/workflows/test_sbml_semantic_test_suite.yml
@@ -56,6 +56,6 @@ jobs:
       uses: codecov/codecov-action@v3.1.0
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage_SBMLSuite.xml
+        file: coverage_SBMLSuite.xml
         flags: sbmlsuite
         fail_ci_if_error: true
