--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -87,7 +87,7 @@ jobs:
     - name: Python tests
       run: |
         source build/venv/bin/activate \
-        && pip3 install coverage pytest pytest-cov \
+        && pip3 install coverage pytest pytest-cov pytest-rerunfailures \
         && pytest \
           --ignore-glob=*petab* \
           --cov=amici \
