--- a/.github/workflows/deploy_protected.yml
+++ b/.github/workflows/deploy_protected.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - master
+      - develop
   workflow_dispatch:
 
 jobs:
@@ -28,7 +29,7 @@ jobs:
     - uses: actions/checkout@master
     - run: git archive -o docker/amici.tar.gz --format=tar.gz HEAD
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@2.8
+      uses: elgohr/Publish-Docker-Github-Action@v4
       with:
         name: dweindl/amici
         username: ${{ secrets.DOCKER_USERNAME }}
