--- a/.github/workflows/test_valgrind.yml
+++ b/.github/workflows/test_valgrind.yml
@@ -43,7 +43,8 @@ jobs:
             libboost-serialization-dev \
             libhdf5-serial-dev \
             swig \
-            valgrind
+            valgrind \
+            libboost-math-dev
 
     - name: Build AMICI
       run: |
