--- a/.github/workflows/test_valgrind.yml
+++ b/.github/workflows/test_valgrind.yml
@@ -20,8 +20,8 @@ jobs:
       matrix:
         python-version: [ "3.8" ]
 
-    env:
-      ENABLE_AMICI_DEBUGGING: "TRUE"
+#    env:
+#      ENABLE_AMICI_DEBUGGING: "TRUE"
 
     steps:
     - name: Set up Python ${{ matrix.python-version }}
