--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -11,6 +11,7 @@ jobs:
     env:
       ENABLE_GCOV_COVERAGE: "TRUE"
       CI_SONARCLOUD: "TRUE"
+      ENABLE_AMICI_DEBUGGING: "TRUE"
 
     strategy:
       matrix:
