--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -62,12 +62,12 @@ jobs:
           source ./build/venv/bin/activate \
             && pip3 install wheel pytest shyaml pytest-cov pysb \
             && pip3 install \
-          git+https://github.com/PEtab-dev/libpetab-python.git@develop
+          git+https://github.com/PEtab-dev/libpetab-python.git@model_pysb
 
       # retrieve test models
       - name: Download and install PEtab test suite
         run: |
-          git clone --depth 1 --branch develop \
+          git clone --depth 1 --branch petab_v2 \
             https://github.com/PEtab-dev/petab_test_suite \
             && source ./build/venv/bin/activate \
             && cd petab_test_suite && pip3 install -e .
