Update valgrind suppressions / fix cpu_timeB reset (#1824)
* Update valgrind suppressions
* Formatting
* Fix special missing cpu_timeB reset in case `Solver` is used without adjoints after initial use with adjoints (fixes #1812) 
* Raise in case of contract violation (instead of terminating without proper message)
* Unique names for test models

--- a/.github/workflows/test_valgrind.yml
+++ b/.github/workflows/test_valgrind.yml
@@ -20,7 +20,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [ 3.8 ]
+        python-version: [ "3.8" ]
 
     env:
       ENABLE_AMICI_DEBUGGING: "TRUE"
@@ -44,8 +44,10 @@ jobs:
             libatlas-base-dev \
             libboost-serialization-dev \
             libhdf5-serial-dev \
+            python3-venv \
             swig \
-            valgrind
+            valgrind \
+            libboost-math-dev
 
     - name: Build AMICI
       run: |
