--- a/.github/workflows/test_benchmark_collection_models.yml
+++ b/.github/workflows/test_benchmark_collection_models.yml
@@ -39,8 +39,8 @@ jobs:
         sudo apt-get update \
           && sudo apt-get install -y swig libatlas-base-dev
 
-    - run: pip3 install pytest shyaml \
-             && pip3 install \
+    - run: pip3 install pytest shyaml 
+             && pip3 install 
                 git+https://github.com/PEtab-dev/libpetab-python.git@model_pysb
 
     - run: echo "${HOME}/.local/bin/" >> $GITHUB_PATH
