--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -75,6 +75,7 @@ jobs:
         run: |
           source ./build/venv/bin/activate \
            && pip install -U  git+https://github.com/PEtab-dev/libpetab-python.git@model_pysb \
+          &&  cat /home/runner/work/AMICI/AMICI/build/venv/lib/python3.8/site-packages/petab/models/__init__.py \
             && pytest --cov-report=xml:coverage.xml \
               --cov=./ python/tests/test_*petab*.py
 
