--- a/.github/workflows/test_performance.yml
+++ b/.github/workflows/test_performance.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - develop
       - master
-      - sparsify_jacobian
+      - fix_perftest
 
   pull_request:
     branches:
