--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -45,6 +45,12 @@ zip_safe = False
 [options.extras_require]
 petab = petab>=0.1.27
 pysb = pysb>=1.13.1
+test =
+    pytest
+    pytest-cov
+    pytest-rerunfailures
+    coverage
+    shyaml
 
 [options.package_data]
 amici =
