--- a/.github/workflows/test_petab_test_suite.yml
+++ b/.github/workflows/test_petab_test_suite.yml
@@ -44,7 +44,7 @@ jobs:
             libatlas-base-dev \
             python3-venv
 
-      - run: pip3 install pytest shyaml pytest-cov pysb petab
+      - run: pip3 install pysb petab
 
       - name: Build BNGL
         run: |
