--- a/.github/workflows/test_windows.yml
+++ b/.github/workflows/test_windows.yml
@@ -46,7 +46,6 @@ jobs:
       shell: bash
       run: |
         python -m pip install --upgrade pip \
-          && pip install pytest petab \
           && choco install -y ninja \
           && choco install -y swig
 
@@ -61,7 +60,7 @@ jobs:
     - name: Install sdist
       working-directory: python/sdist
       shell: bash
-      run: pip install -v $(ls -t dist/amici-*.tar.gz | head -1)
+      run: pip install -v $(ls -t dist/amici-*.tar.gz | head -1)[petab,test]
 
     - run: python -m amici
 
