test CSE with benchmark models

--- a/.github/workflows/test_benchmark_collection_models.yml
+++ b/.github/workflows/test_benchmark_collection_models.yml
@@ -21,8 +21,10 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [ 3.8 ]
-
+        python-version: [ "3.8" ]
+        extract_subexpressions: ["true", "false"]
+    env:
+      AMICI_EXTRACT_CSE: ${{ matrix.extract_subexpressions }}
     steps:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
