--- a/.github/workflows/test_benchmark_collection_models.yml
+++ b/.github/workflows/test_benchmark_collection_models.yml
@@ -26,8 +26,6 @@ jobs:
         extract_subexpressions: ["true", "false"]
     env:
       AMICI_EXTRACT_CSE: ${{ matrix.extract_subexpressions }}
-      CC: clang
-      CXX: clang
 
     steps:
     - name: Set up Python ${{ matrix.python-version }}
@@ -43,7 +41,7 @@ jobs:
     - name: apt
       run: |
         sudo apt-get update \
-          && sudo apt-get install -y swig libatlas-base-dev clang
+          && sudo apt-get install -y swig libatlas-base-dev
 
     - run: echo "${HOME}/.local/bin/" >> $GITHUB_PATH
     - run: echo "${GITHUB_WORKSPACE}/tests/performance/" >> $GITHUB_PATH
