--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -17,7 +17,8 @@ formats:
 python:
   install:
     - requirements: documentation/rtd_requirements.txt
-
+    - method: pip
+      path: exhale>=0.3.5
 build:
   os: "ubuntu-20.04"
   apt_packages:
