Update documentation stack (#1858)
* Update documentation stack
*Fix type annotations

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -17,7 +17,7 @@ formats:
 python:
   install:
     - requirements: documentation/rtd_requirements.txt
-
+    - requirements: documentation/rtd_requirements2.txt
 build:
   os: "ubuntu-20.04"
   apt_packages:
