--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,7 @@ tests/test/*
 */tests/fixed_initial_amici/*
 */tests/localfunc_amici/*
 */tests/conversion/*
+*/tests/dimerization/*
 tests/cpp/writeResults.h5
 tests/cpp/writeResults.h5.bak
 tests/sbml-test-suite/*
