remove equinox dependency, list dependencies

--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -45,6 +45,9 @@ zip_safe = False
 [options.extras_require]
 petab = petab>=0.1.27
 pysb = pysb>=1.13.1
+jax =
+    jax
+    diffrax
 test =
     pytest
     pytest-cov
