--- a/.github/workflows/test_downstream.yml
+++ b/.github/workflows/test_downstream.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.10]
+        python-version: ['3.10']
 
     steps:
     - name: Set up Python ${{ matrix.python-version }}
@@ -22,23 +22,12 @@ jobs:
     - name: Install AMICI apt dependencies
       run: |
         sudo apt-get update && sudo apt-get install -y \
-          cmake \
-          g++ \
-          libatlas-base-dev \
-          libboost-serialization-dev \
-          libhdf5-serial-dev \
-          python3-venv \
           swig \
-          lcov \
-          libboost-math-dev
+          libatlas-base-dev
 
-    - name: Build AMICI dependencies
+    - name: Install AMICI
       run: |
-        scripts/buildDependencies.sh
-
-    - name: Build AMICI
-      run: |
-        scripts/buildAmici.sh
+        scripts/installAmiciSource.sh
 
     - name: Install pyPESTO
       run: |
