--- a/.github/workflows/test_downstream.yml
+++ b/.github/workflows/test_downstream.yml
@@ -1,4 +1,8 @@
-name: Downstream tests
+# Test downstream tools which may be affected by AMICI API changes
+# These tests are not expected to pass, but can inform about
+# future inconsistencies
+
+name: Downstream
 on:
   pull_request:
     branches:
@@ -7,7 +11,7 @@ on:
 
 jobs:
   pypesto:
-    name: Test pyPESTO
+    name: pyPESTO
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -18,6 +22,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Checkout project
+      uses: actions/checkout@master
+      with:
+        fetch-depth: 20
 
     - name: Install AMICI apt dependencies
       run: |
