--- a/.github/workflows/test_downstream.yml
+++ b/.github/workflows/test_downstream.yml
@@ -43,7 +43,7 @@ jobs:
         wget -q -O bionetgen.tar \
           https://github.com/RuleWorld/bionetgen/releases/download/BioNetGen-2.7.0/BioNetGen-2.7.0-linux.tgz
         tar -xf bionetgen.tar
-        echo "BNGPATH=${pwd}/BioNetGen-2.7.0" >> $GITHUB_ENV
+        echo "BNGPATH=$(pwd)/BioNetGen-2.7.0" >> $GITHUB_ENV
 
     - name: Download pyPESTO
       run: |
