--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -22,7 +22,7 @@ classifiers =
     Topic :: Scientific/Engineering :: Bio-Informatics
 
 [options]
-packages = find:
+packages = find_namespace:
 package_dir =
     amici = amici
 python_requires = >=3.8
@@ -39,7 +39,6 @@ install_requires =
     toposort
     setuptools>=48
     mpmath
-include_package_data = True
 zip_safe = False
 
 [options.extras_require]
