--- a/python/sdist/setup.cfg
+++ b/python/sdist/setup.cfg
@@ -39,6 +39,7 @@ install_requires =
     toposort
     setuptools>=48
     mpmath
+include_package_data = True
 zip_safe = False
 
 [options.extras_require]
