--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,5 +1,5 @@
 if(DEFINED ENV{PYTHON_EXECUTABLE})
-    set( PYTHON_EXECUTABLE $ENV{PYTHON_EXECUTABLE} )
+    set( Python3_EXECUTABLE $ENV{PYTHON_EXECUTABLE} )
 endif()
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     find_package(PythonInterp 3.8 REQUIRED)
