--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,11 +1,10 @@
-if(DEFINED $ENV{PYTHON_EXECUTABLE})
-    set( Python3_EXECUTABLE $ENV{PYTHON_EXECUTABLE} )
+if(DEFINED ENV{PYTHON_EXECUTABLE})
+    set(Python3_EXECUTABLE $ENV{PYTHON_EXECUTABLE})
 endif()
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
-    set(Python3_EXECUTABLE $ENV{PYTHON_EXECUTABLE})
     find_package(PythonInterp 3.8 REQUIRED)
 else()
-    find_package (Python3 COMPONENTS Interpreter)
+    find_package(Python3 COMPONENTS Interpreter)
 endif()
 
 
