--- a/models/model_jakstat_adjoint_o2/swig/CMakeLists.txt
+++ b/models/model_jakstat_adjoint_o2/swig/CMakeLists.txt
@@ -15,12 +15,15 @@ endif(POLICY CMP0086)
 find_package(SWIG REQUIRED)
 include(${SWIG_USE_FILE})
 
+if(DEFINED ENV{PYTHON_EXECUTABLE})
+    set(Python3_EXECUTABLE $ENV{PYTHON_EXECUTABLE})
+endif()
 if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
     find_package(PythonLibs REQUIRED)
     include_directories(${PYTHON_INCLUDE_DIRS})
     set(Python3_LIBRARIES ${PYTHON_LIBRARIES})
 else()
-    find_package (Python3 COMPONENTS Development)
+    find_package(Python3 COMPONENTS Interpreter Development)
     include_directories(${Python3_INCLUDE_DIRS})
 endif()
 
