Fix performance test warnings
* Missing upload artifact
* Don't use 'tempfile' - fixes #1899

--- a/.github/workflows/test_performance.yml
+++ b/.github/workflows/test_performance.yml
@@ -68,8 +68,8 @@ jobs:
     - name: "Upload artifact: CS_Signalling_ERBB_RAS_AKT_petab"
       uses: actions/upload-artifact@v3
       with:
-        name: CS_Signalling_ERBB_RAS_AKT
-        path: CS_Signalling_ERBB_RAS_AKT/CS_Signalling_ERBB_RAS_AKT_petab
+        name: model_performance_test
+        path: model_performance_test
 
     # install model package
     - name: Install test model
