--- a/.github/workflows/deploy_protected.yml
+++ b/.github/workflows/deploy_protected.yml
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.10]
+        python-version: [3.8]
 
     steps:
     - name: Set up Python ${{ matrix.python-version }}
@@ -27,21 +27,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - uses: actions/checkout@v3
     - run: git archive -o docker/amici.tar.gz --format=tar.gz HEAD
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    - name: Publish to Registry
+      uses: elgohr/Publish-Docker-Github-Action@v4
       with:
-        platforms: linux/amd64,linux/arm64
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
+        name: dweindl/amici
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        context: docker/
-        push: true
-        tags: dweindl/amici
-        file: Dockerfile
+        workdir: docker/
+        dockerfile: Dockerfile
+        tag_names: true
