--- a/.github/workflows/deploy_protected.yml
+++ b/.github/workflows/deploy_protected.yml
@@ -28,6 +28,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - uses: actions/checkout@v3
     - run: git archive -o docker/amici.tar.gz --format=tar.gz HEAD
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Publish to Registry
