--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,8 +2,7 @@ FROM ubuntu:22.04
 
 # install dependencies 
 
-RUN apt update
-RUN apt-get install -y \
+RUN apt-get update && apt-get install -y \
     g++ \
     libatlas-base-dev \
     python3 \
@@ -16,19 +15,10 @@ RUN apt-get install -y \
 
 COPY amici.tar.gz /tmp
 
-RUN pip3 install --upgrade pip build
-
-# build sdist
-
-RUN mkdir -p /tmp/amici/ && \
+RUN pip3 install --upgrade pip build && \
+    mkdir -p /tmp/amici/ && \
     cd /tmp/amici && \
     tar -xzf ../amici.tar.gz && cd /tmp/amici/python/sdist && \
-    python3 -m build --sdist
-
-# install
-
-RUN pip3 install -v $(ls -t /tmp/amici/python/sdist/dist/amici-*.tar.gz | head -1)[petab]
-
-# cleanup
-
-RUN rm -rf /tmp/*
+    python3 -m build --sdist && \
+    pip3 install -v $(ls -t /tmp/amici/python/sdist/dist/amici-*.tar.gz | head -1)[petab] && \
+    rm -rf /tmp/*
