--- a/.github/workflows/deploy_protected.yml
+++ b/.github/workflows/deploy_protected.yml
@@ -4,9 +4,8 @@ on:
     branches:
       - master
       - develop
+      - release**
   pull_request:
-    branches:
-      - master
     paths:
       - docker/Dockerfile
   workflow_dispatch:
