--- a/.github/workflows/deploy_protected.yml
+++ b/.github/workflows/deploy_protected.yml
@@ -4,9 +4,10 @@ on:
     branches:
       - master
       - develop
+      - release**
   pull_request:
-    branches:
-      - master
+    paths:
+      - docker/Dockerfile
   workflow_dispatch:
 
 jobs:
@@ -27,6 +28,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - uses: actions/checkout@v3
     - run: git archive -o docker/amici.tar.gz --format=tar.gz HEAD
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v4
       with:
@@ -36,3 +41,4 @@ jobs:
         workdir: docker/
         dockerfile: Dockerfile
         tag_names: true
+        platforms: linux/amd64,linux/arm64
